--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body id="bg" class="bg-color">
     <div class="svgs">
-        <div><svg class="sun"><image href="../assets/Darkmode/assets/sun.svg"></image></svg></div>
-        <div><svg class="moon"><image href="../assets/Darkmode/assets/moon.svg"></image></svg></div>
+        <div><svg class="sun"><image href="./Darkmode/assets/sun.svg"></image></svg></div>
+        <div><svg class="moon"><image href="./Darkmode/assets/moon.svg"></image></svg></div>
     </div>
     <label class="switch">
         <div class="blocker"></div>
